# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.169 2010-09-30 10:07:21 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.9 (2010/??/??)
 - 2010-09-22 Fixed bug#5903 - E-mail notification links don't contain <a href... tags.
 - 2010-09-29 Fixed bug#6030 - Event notifications get's fired several times on
    event "TicketFreeTextUpdate".
 - 2010-09-22 Fixed bug#5941 - Error in Apache log when no tickets and/or customers in dashboard.
 - 2010-09-14 Fixed bug#5541 - Dashboard Chart generates error in webserver log.
 - 2010-09-09 Fixed bug#5462 - Kernel::System::Ticket::TicketEscalationIndexBuild()
    does not invalidate the cache.
 - (2010/08/27) Fixed bug#5667 - Rich Text is not working in ipad. It's not
    possible to add a note or close a ticket.
 - (2010/08/25) Fixed bug#5266 - Ticket Zoom shows wrong html content if there
    is no text but two html attachments in there.

2.4.8 (2010/09/15)
 - (2010/08/24) Applied change suggested in bug#5733. $Text should be dereferenced while counting its length.
 - (2010/08/20) Fixed bug#5742 - Outgoing email link detection does not work properly.
 - (2010/08/18) Fixed bug#5444 - TicketZoom mask vulnerable to XSS.
 - (2010/08/09) Fixed bug#5698 - Ticket Assignment includes '(' character.
 - (2010/07/20) Fixed bug#4483 - AgentTicketActions, set radio button when select
    old/ new owner are selected, fix wrong javascript behavior.
 - (2010/07/15) Fixed bug#5416 - AgentTicketMove does not support Pending Date.
 - (2010/07/15) Fixed bug#5556 - Broken unicode chars in CustomerUser selections.
 - (2010/07/14) Fixed bug#5132 - New owner validation always ask to set a owner.
 - (2010/07/13) Fixed bug#5210 - LinkQuote consumes all CPU memory when processing a
    large amount of data.