@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.169 2010-09-30 10:07:21 mg Exp $
+# $Id: CHANGES,v 1.993.2.170 2010-09-30 11:48:44 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.9 (2010/??/??)
+ - 2010-09-30 Fixed bug#6016 - AgentTicketZoom is vunerable to XSS attacks from HTML e-mails.
  - 2010-09-22 Fixed bug#5903 - E-mail notification links don't contain <a href... tags.
  - 2010-09-29 Fixed bug#6030 - Event notifications get's fired several times on
     event "TicketFreeTextUpdate".
